# math-learning-tool

./: .env.example  .env.example.university  .gitignore  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_V2.md  README_UNIVERSITY.md  Readme.md  SKILLS_IMPLEMENTATION.md  UPGRADE_GUIDE.md  app.py  app_university.py  config.py  docker-compose.yml  requirements.txt  test_university.py
backend/: Dockerfile  pyproject.toml
backend/src/math_tutor/: __init__.py
backend/src/math_tutor/api/: __init__.py  main.py
backend/src/math_tutor/api/routes/: __init__.py  chat.py  grades.py  health.py  problems.py  sessions.py  skills.py  videos.py
backend/src/math_tutor/application/: __init__.py
backend/src/math_tutor/application/interfaces/: __init__.py  embedding_provider.py  llm_provider.py  llm_service.py  rerank_provider.py  skill_repository.py  tool.py  video_generator.py
backend/src/math_tutor/application/use_cases/: __init__.py  process_problem.py
backend/src/math_tutor/config/: __init__.py  dependencies.py  logging_config.py  settings.py
backend/src/math_tutor/domain/: __init__.py  exceptions.py
backend/src/math_tutor/domain/entities/: __init__.py  problem.py  skill.py  solution.py
backend/src/math_tutor/domain/value_objects/: __init__.py  agent_state.py  grade.py  visual_styles.py
backend/src/math_tutor/infrastructure/: __init__.py
backend/src/math_tutor/infrastructure/agent/: __init__.py  events.py  learned_memory.py  learned_wiki.py  loop.py  (+9 more)
backend/tests/: conftest.py
backend/tests/integration/api/: test_routes.py
backend/tests/unit/domain/: test_entities.py
(+170 files in other folders)
